--- a/gb/23/8/26/n14061496.md
+++ b/gb/23/8/26/n14061496.md
@@ -22,52 +22,41 @@
 <p>蔡英文总统表示，在参访过程中见到了旧监与宿舍在修复后的景观，让人不禁想到此一游，这样的变化很不简单，因为文创聚落的进驻带来了创意与活力，让旧监的气氛有了改变与不同。地方创生一词听来浪漫，但过程却不容易，带领的人物相当重要，来到嘉义市感受到这里是充满历史与文化，是个能让年轻人发挥创意的地方，感谢黄敏惠市长让嘉义市有了不同。</p>
 <p>蔡英文总统也赞许进驻团队，虽然在此创业的年轻人背景、资历不一样，但进驻团队的存在不仅为旧监带来创意、经济的活络，也为旧监创造全民共享的资产。期许未来，中央地方政府能共同协力，带给青年最大的陪伴与支持，带动更多的青年返乡，为地方创造繁荣。</p>
 <p>责任编辑：陈玟绮</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/27/n13675802.md#1">第一商业银行 登录嘉市首栋银行类历史建筑</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/4/6/n13699732.md#1">台湾首展抵嘉 世界名画混叠图反毒特展</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/6/12/n13757661.md#1">木都城市“起嘉厝”-陈振龙师生联展</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/14/n13824857.md#1">古迹日“让旧监自由-解锁”活动起跑</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/20/n13888253.md#1">嘉义旧监与日本网走监狱开启两国矫正外交</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061410.md#1">县长化身LISA姐姐 体验一日店员 呼吁支持身障朋友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061400.md#1">台塑企业举办社区健康促进暨长者夏令营 守护长辈健康</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061376.md#1">米食新纪元 全台首条“百分百纯米土司”问世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061156.md#1">2023嘉义市购物节登录金额破二亿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061116.md#1">全台宗教团体表扬  蔡英文亲临现场祝贺</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137753.md#1">屏东杀蛇溪水质净化场启用 去污率达7成</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137759.md#1">2023空气软枪全国冠军赛 屏县立体育馆登场</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137762.md#1">扶轮之子认养捐赠 屏东96名学子受惠</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137678.md#1">农业部第3届十大绿色照顾 在斗南举办颁奖典礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137650.md#1">缘定云林冬恋物语一日游 云县首场单身联谊成功</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/4/n10889466.md#1" target="_blank">裴毅然：中共小知党（四）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/20/n11398383.md#1" target="_blank">人权组织执行主任：一起曝光中共邪恶罪行</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/4/16/n10307769.md#1" target="_blank">中共淫乱的前生今世（10）溃堤效应</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/5/n11769925.md#1" target="_blank">见证大法超常 屏东法轮功学员在法中熔炼</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057320.md#1">在高空目击UFO 美航空公司机长拍下画面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/9/n14051156.md#1">带你认识六大茶系</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058703.md#1">二十四节气：秋天的第二个节气为何称“处暑”?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056411.md#1">七夕情话响千代  天神护祐得真福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058486.md#1">真实的宋代爱情故事：比苏东坡还深情，“瞎了我也爱你”的刘庭式</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061178.md#1">【拍案惊奇】中共下令要“后继有人”4人受关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061246.md#1">【探索时分】普里戈津坠机亡 普京下手了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060612.md#1">【百年真相】中共史上最灵异事件</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14059943.md#1">习近平随从在金砖峰会上被安保拦截 视频曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060120.md#1">岳山：习近平的面相、权力与生死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060662.md#1">王友群：习在南非遭遇意外一幕四大看点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059682.md#1">帮AKIRA庆祝42岁 林志玲甜喊：Baby生日快乐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059901.md#1">离婚一年半突吐心声 杨颖：不太喜欢七夕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060629.md#1">宁静曝行业乱象：没几个导演敢用演技好的演员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060675.md#1">梁朝伟回应私生子传闻 自曝与刘嘉玲婚姻现况</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059408.md#1">70岁陈盈洁北检报到入监 许常德：她身体不佳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059503.md#1">不用除草剂 专家教你如何迅速除去杂草</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059650.md#1">抗氧化“水果皇后”荔枝 这样吃防过敏、中毒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060194.md#1">美国空姐透露 乘客打包行李会犯的最大错误</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059229.md#1">新变种EG.5传播不受控 预计冬季更广泛 重在预防</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060846.md#1">如何减少痛感？ 美CIA解密文件曝生活秘技</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14129958.md#1">威赫西域的汉宣帝 一道柔情诏书显露夫妻的恩义</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133709.md#1">【未解之谜】《推背图》47象 紫薇圣人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131208.md#1">莫愁女 诗歌里永不老去的佳人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127127.md#1">奉天命助圣王治世 百日为相白马化龙（上）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/21/n13594978.md#1">【器乐独奏与协奏曲】布鲁赫《苏格兰幻想曲》，作品第46号</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137533.md#1">【车评】最实惠欧洲SUV  2024 Volkswagen Atlas SEL Premium R-Line</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137659.md#1">【全球新闻】大陆医生：中共病毒感染爆发式增长</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136995.md#1">【中国禁闻】亲信旧部纷被抓 赵乐际遭围剿？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136615.md#1">中共央视新闻播出辱习画面 后紧急删除</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135839.md#1">很梦幻？Costco新版购物车引发会员热议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135801.md#1">周海媚死讯不断反转 堪称现实版《新闻女王》</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136609.md#1">范冰冰竹林虎啸礼服入选CNN十大红毯造型</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135870.md#1">10年前拍完未播 周海媚遗作遭拍卖原因曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136694.md#1">解约香港无线4个月 王晶之女王子涵曝新动向</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14135921.md#1">与周海媚合演《倚天屠龙记》 马景涛写信悼念</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：儿童专属梦幻公主帐篷 63%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">FIJI天然自流瓶装水 不含8 种主要过敏原</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135019.md#1">苹果防糖尿病、阻癌细胞扩散 品种、吃法全攻略</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14128227.md#1">掉发怎么办？中医6招教你长回浓密秀发</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136611.md#1">已逝明星患的是终生疾病？关于红斑狼疮一篇看懂</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/26/n14061496.htm">总统蔡英文由市长黄敏惠偕同访视嘉义旧监</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061496.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
